2005-07-23  Sven de Marothy  <sven@physto.se>

	* java/awt/List.java (List): Initialize selected[] to an empty array.

2005-07-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        NEWS: Added entry about POA.

2005-07-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/RequestProcessingPolicyOperations.java,
        org/omg/PortableServer/ServantRetentionPolicyOperations.java,
        org/omg/PortableServer/ThreadPolicyOperations.java,
        org/omg/PortableServer/IdAssignmentPolicyOperations.java,
        org/omg/PortableServer/IdUniquenessPolicyOperations.java,
        org/omg/PortableServer/ImplicitActivationPolicyOperations.java,
        org/omg/PortableServer/LifespanPolicyOperations.java:
        Inherit from PolicyOperations.

2005-07-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTableUI.java:
	(KeyHandler.keyPressed): If row selection is not allowed in the table,
	then consider all rows of a particular column selected when you get an
	ENTER key event.  This matches JDK behaviour and fixes an out of 
	bounds error.  Also, wrapped lines at 80 chars.

2005-07-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTableUI.java:
	(paint): Only highlight the border of a table cell if it is the most
	recently updated cell.

2005-07-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicListUI.java:
	(paintCell): Fixed misnamed variable.

2005-07-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 
        
        * gnu/CORBA/Poa/gnuPOA.java,
        gnu/CORBA/Poa/gnuPOAManager.java,
        gnu/CORBA/Poa/activeObjectMap.java,
        gnu/CORBA/Poa/gnuAdapterActivator.java,
        gnu/CORBA/Poa/gnuServantObject.java,
        gnu/CORBA/Poa/servantDelegate.java,
        gnu/CORBA/Poa/ORB_1_4.java,
        gnu/CORBA/Poa/policySets.java,
        gnu/CORBA/Poa/gnuPoaCurrent.java,
        gnu/CORBA/Poa/LocalDelegate.java,